--- a/EX1/templates/flatpages/default.html
+++ b/EX1/templates/flatpages/default.html
@@ -54,6 +54,11 @@
     </body>
 </html>
 
+
+
+
+
+<!--Cтили (не получилось подключтиь через папку Бл****! -->
 <style>
 :root {
   --bs-blue: #0d6efd;
