--- a/EX1/templates/flatpages/default.html
+++ b/EX1/templates/flatpages/default.html
@@ -48,6 +48,8 @@
             <div class="text-center mt-5">
                 <h1>{{ flatpage.title}}</h1>
                 <p class="lead">{{flatpage.content}}</p>
+                {% block content %}
+                {% endblock content %}
 <!--                <p>Bootstrap v5.2.3</p>-->
             </div>
         </div>
