--- a/EX1/templates/product.html
+++ b/EX1/templates/product.html
@@ -1,3 +1,4 @@
+<!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
 
 <!-- Название у нас будет Product -->
