--- a/EX1/templates/app_news.html
+++ b/EX1/templates/app_news.html
@@ -33,6 +33,7 @@ news
 
        </table>
    {% else %}
-       <h2>Товаров нет!</h2>
+       <h2>Товаров нет!
+       ужас</h2>
    {% endif %}
 {% endblock content %}
