--- a/EX1/templates/app_news_id.html
+++ b/EX1/templates/app_news_id.html
@@ -1,7 +1,7 @@
 <!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
 
-<!-- Название у нас будет Product -->
+
 {% block title %}
 newsid
 {% endblock title %}
@@ -9,4 +9,6 @@ newsid
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
 {% block content %}
 <h1>{{ newsid }}</h1>
+<h2>{{publish_date}}</h2>
+<!--{{ News.news_publish_date }}</h1>-->
 {% endblock content %}
