--- a/EX1/templates/app_news.html
+++ b/EX1/templates/app_news.html
@@ -19,8 +19,8 @@ news
 
            {% for newsid in news %}
            <tr>
-<!--               <td>{{ newsid.description|truncatewords:2 }}</td>-->
-               <td>{{ newsid.news_name }}</td>
+
+               <td>{{ newsid.news_name|truncatewords:2 }}</td>
                <td>{{ newsid.news_body_text|truncatewords:2 }}</td>
                <td>{{ newsid.news_category }}</td>
            </tr>
