--- a/EX1/templates/app_news_id.html
+++ b/EX1/templates/app_news_id.html
@@ -1,4 +1,4 @@
-<!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
+
 {% extends 'flatpages/default.html' %}
 
 
@@ -9,6 +9,7 @@ newsid
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
 {% block content %}
 <h1>{{ newsid }}</h1>
-<h2>{{publish_date}}</h2>
-<!--{{ News.news_publish_date }}</h1>-->
+
+<h1>{{newsid.news_publish_date}}</h1>
+
 {% endblock content %}
