--- a/EX1/templates/app_news_id.html
+++ b/EX1/templates/app_news_id.html
@@ -6,10 +6,11 @@
 newsid
 {% endblock title %}
 
-<!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
+
 {% block content %}
 <h1>{{ newsid }}</h1>
-
 <h1>{{newsid.news_publish_date}}</h1>
+<h1>{{newsid.news_body_text}}</h1>
+
 
 {% endblock content %}
