--- a/EX1/templates/products.html
+++ b/EX1/templates/products.html
@@ -1,8 +1,6 @@
 {% extends 'flatpages/default.html' %}
 
-{% load custom_filters %}!
-<!-- Подключаем новый файл с нашим тегом -->
-{% load custom_tags %}
+{% load custom_filters %}
 
 {% block title %}
 Products
@@ -10,11 +8,6 @@ Products
 
 {% block content %}
    <h1>Все товары</h1>
-   <!-- Вот так выглядело использование переменной и фильтра -->
-   <!-- <h3>{{ time_now|date:'M d Y' }}</h3> -->
-   <!-- А вот так мы используем наш тег-->
-   <h3>{% current_time '%b %d %Y' %}</h3>
-   <h3> {{ next_sale|default_if_none:"Чуть позже сообщим о распродаже!" }} </h3>
 
    <hr>
    {% if products %}
@@ -30,9 +23,9 @@ Products
            {% for product in products %}
            <tr>
                <td>{{ product.name }}</td>
-               <td>{{ product.description|truncatewords:2 }}</td>
+               <td>{{ product.description|truncatechars:15 }}</td>
                <td>{{ product.category.name }}</td>
-               <td>{{ product.price|currency:"usd" }}</td>
+               <td>{{ product.price|currency }}</td>
                <td>{{ product.quantity }}</td>
            </tr>
            {% endfor %}
@@ -41,4 +34,28 @@ Products
    {% else %}
        <h2>Товаров нет!</h2>
    {% endif %}
+
+   {# Добавляем пагинацию на страницу #}
+
+   {# Информация о предыдущих страницах #}
+   {% if page_obj.has_previous %}
+       <a href="?page=1">1</a>
+       {% if page_obj.previous_page_number != 1 %}
+           ...
+           <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+       {% endif %}
+   {% endif %}
+
+   {# Информация о текущей странице #}
+   {{ page_obj.number }}
+
+   {# Информация о следующих страницах #}
+   {% if page_obj.has_next %}
+       <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
+
 {% endblock content %}
